--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack",
     "production": "NODE_ENV=production webpack",
-    "watch": "npm run build -- --watch"
+    "watch": "npm run dev -- --watch"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,8 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "css-loader": "^0.26.2",
+    "node-sass": "^4.5.0",
+    "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
     "webpack": "^2.2.1"
   }
